created service to get details from movies by Id
